--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,18 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+		<configuration>
+      <source>1.8</source>
+      <target>1.8</target>
+			<verbose>true</verbose>
+			<fork>true</fork>
+			<executable>C:/Program Files (x86)/Java/jdk1.8.0_231/bin/javac</executable>
+		</configuration>
+	</plugin>
 		</plugins>
 	</build>
 
